@@ -3,6 +3,9 @@ package server.database.entities.question;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import commons.entities.ActivityDTO;
+import commons.entities.AnswerDTO;
+import commons.entities.QuestionDTO;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -30,17 +33,26 @@ class EstimateQuestionTest {
         q.setActivities(components);
     }
 
-    private Answer getAnswer(int estimate) {
-        Answer ans = new Answer();
-        List<Activity> answerActivities = new ArrayList<>();
-        answerActivities.add(getActivity(estimate));
+    private AnswerDTO getAnswer(int estimate) {
+        AnswerDTO ans = new AnswerDTO();
+        List<ActivityDTO> answerActivities = new ArrayList<>();
+        answerActivities.add(getActivity(estimate).getDTO());
         ans.setUserChoice(answerActivities);
         return ans;
     }
 
     @Test
+    void testFromDTOConstructor() {
+        QuestionDTO questionDTO = new QuestionDTO();
+        questionDTO.setText("Question text");
+
+        EstimateQuestion q = new EstimateQuestion(questionDTO);
+        assertEquals("Question text", q.getText());
+    }
+
+    @Test
     void checkAnswerTest() {
-        List<Answer> userGuesses = new ArrayList<>(Arrays.asList(
+        List<AnswerDTO> userGuesses = new ArrayList<>(Arrays.asList(
                 getAnswer(90), // #2
                 getAnswer(50), // #4
                 getAnswer(107), // #1
@@ -52,7 +64,7 @@ class EstimateQuestionTest {
 
     @Test
     void checkAnswerSameRankTest() {
-        List<Answer> userGuesses = new ArrayList<>(Arrays.asList(
+        List<AnswerDTO> userGuesses = new ArrayList<>(Arrays.asList(
                 getAnswer(90), // #2
                 getAnswer(50), // #3
                 getAnswer(107), // #1
@@ -65,15 +77,19 @@ class EstimateQuestionTest {
 
     @Test
     void checkAnswerMismatchingSize() {
-        List<Answer> userGuesses = new ArrayList<>(Arrays.asList(
+        List<AnswerDTO> userGuesses = new ArrayList<>(Arrays.asList(
                 getAnswer(90), // #2
                 getAnswer(50), // #3
                 getAnswer(107), // #1
                 getAnswer(0))); // #4
 
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDTO> answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(3).getDTO()
+        );
+        AnswerDTO a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userGuesses.add(a);
 
