@@ -3,6 +3,9 @@ package server.database.entities.question;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
+import commons.entities.ActivityDTO;
+import commons.entities.AnswerDTO;
+import commons.entities.QuestionDTO;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -11,7 +14,6 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 
 class OrderQuestionTest {
-
     static Question q;
 
     private static Activity getActivity(int id) {
@@ -35,26 +37,47 @@ class OrderQuestionTest {
     }
 
     @Test
+    void testFromDTOConstructor() {
+        QuestionDTO questionDTO = new QuestionDTO();
+        questionDTO.setText("Question text");
+
+        OrderQuestion q = new OrderQuestion(questionDTO);
+        assertEquals("Question text", q.getText());
+    }
+
+    @Test
     void checkAnswerTest() {
         // first user is right
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDTO> answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(3).getDTO()
+        );
+        AnswerDTO a = new AnswerDTO();
         a.setUserChoice(answerAct);
-        List<Answer> userAnswers = new ArrayList<>();
+        List<AnswerDTO> userAnswers = new ArrayList<>();
         userAnswers.add(a);
 
         // second user is decreasing
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(3), getActivity(2), getActivity(1), getActivity(0)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(3).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(0).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has two inverted (2/3 of points)
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(3).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
@@ -64,24 +87,36 @@ class OrderQuestionTest {
     @Test
     void checkAnswerDecreasing() {
         // first user is increasing
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDTO> answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(3).getDTO()
+        );
+        AnswerDTO a = new AnswerDTO();
         a.setUserChoice(answerAct);
-        List<Answer> userAnswers = new ArrayList<>();
+        List<AnswerDTO> userAnswers = new ArrayList<>();
         userAnswers.add(a);
 
         // second user is decreasing
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(30), getActivity(2), getActivity(1), getActivity(0)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(30).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(0).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has two inverted (1/3 of points)
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(3).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
@@ -92,28 +127,41 @@ class OrderQuestionTest {
     @Test
     void checkAnswerMismatchingSize() {
         // first user has 4 activities
-        List<Activity> answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(1), getActivity(2), getActivity(3)));
-        Answer a = new Answer();
+        List<ActivityDTO> answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(3).getDTO()
+        );
+        AnswerDTO a = new AnswerDTO();
         a.setUserChoice(answerAct);
-        List<Answer> userAnswers = new ArrayList<>();
+        List<AnswerDTO> userAnswers = new ArrayList<>();
         userAnswers.add(a);
 
         // second user has 5 activities
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(3), getActivity(2), getActivity(1), getActivity(0), getActivity(12)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(3).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(0).getDTO(),
+                getActivity(12).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
         // third user has 4 activities
-        answerAct = new ArrayList<>(Arrays.asList(
-                getActivity(0), getActivity(2), getActivity(1), getActivity(3)));
-        a = new Answer();
+        answerAct = List.of(
+                getActivity(0).getDTO(),
+                getActivity(2).getDTO(),
+                getActivity(1).getDTO(),
+                getActivity(3).getDTO()
+        );
+        a = new AnswerDTO();
         a.setUserChoice(answerAct);
         userAnswers.add(a);
 
-        assertThrows(IllegalArgumentException.class, () -> q.checkAnswer(null));
+        assertThrows(IllegalArgumentException.class, () -> q.checkAnswer(userAnswers));
     }
 
     @Test
